[gd_scene load_steps=11 format=3 uid="uid://bsbo41pehiolb"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_tcbs5"]
[ext_resource type="Texture2D" uid="uid://demy375bbi3d3" path="res://player.png" id="2_0dst4"]
[ext_resource type="Script" path="res://global/states/StateDebugLabel.gd" id="2_t3fyk"]
[ext_resource type="Script" path="res://player/states/PlayerStateMachine.gd" id="4_5jwfj"]
[ext_resource type="Script" path="res://player/states/GroundState.gd" id="5_uiqrh"]
[ext_resource type="Script" path="res://player/states/AirState.gd" id="6_phq81"]
[ext_resource type="Script" path="res://player/components/PlayerInputComponent.gd" id="6_s7heh"]
[ext_resource type="Script" path="res://player/states/WallState.gd" id="7_8aatl"]
[ext_resource type="Script" path="res://player/states/DashState.gd" id="8_gh1s0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3u8x"]
size = Vector2(73, 203)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_tcbs5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0dst4")
hframes = 5
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, 3.5)
shape = SubResource("RectangleShape2D_d3u8x")

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -21.0
offset_top = -103.0
offset_right = 19.0
offset_bottom = -80.0
script = ExtResource("2_t3fyk")
state_machine = NodePath("../PlayerStateMachine")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_5jwfj")
initial_state = NodePath("GroundState")

[node name="GroundState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "player_input")]
script = ExtResource("5_uiqrh")
player = NodePath("../..")
player_input = NodePath("../../Components/PlayerInputComponent")

[node name="AirState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "player_input")]
script = ExtResource("6_phq81")
player = NodePath("../..")
player_input = NodePath("../../Components/PlayerInputComponent")

[node name="WallState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "player_input")]
script = ExtResource("7_8aatl")
player = NodePath("../..")
player_input = NodePath("../../Components/PlayerInputComponent")

[node name="DashState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "player_input")]
script = ExtResource("8_gh1s0")
player = NodePath("../..")
player_input = NodePath("../../Components/PlayerInputComponent")

[node name="DashTimer" type="Timer" parent="PlayerStateMachine/DashState"]
wait_time = 0.35
one_shot = true

[node name="Components" type="Node" parent="."]

[node name="PlayerInputComponent" type="Node" parent="Components" node_paths=PackedStringArray("player_state")]
script = ExtResource("6_s7heh")
player_state = NodePath("../../PlayerStateMachine")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="PlayerStateMachine/DashState/DashTimer" to="PlayerStateMachine/DashState" method="_on_dash_timer_timeout"]
